--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,5 +25,20 @@
     "react": "^18.2.0",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
-  }
+  },
+  "keywords": [
+    "design-system",
+    "react",
+    "components",
+    "ui",
+    "artivism"
+  ],
+  "author": "artivism",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/artivism/design-system.git",
+    "directory": "packages/ui"
+  },
+  "homepage": "https://design.artivism.it"
 }
