--- a/apps/design/tsconfig.json
+++ b/apps/design/tsconfig.json
@@ -1,17 +1,14 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "jsx": "preserve",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ],
+    "plugins": [{ "name": "next" }],
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./app/*"]
-    },
-    "incremental": true
+      "@/*": ["./app/*"],
+      "@artivism/tokens": ["../../packages/tokens/src"],
+      "@artivism/ui": ["../../packages/ui/src"],
+      "@artivism/ui/*": ["../../packages/ui/src/*"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
