--- a/apps/design/package.json
+++ b/apps/design/package.json
@@ -12,15 +12,24 @@
   "dependencies": {
     "@artivism/tokens": "*",
     "@artivism/ui": "*",
+    "@radix-ui/react-slot": "^1.2.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.563.0",
     "next": "^16.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@types/node": "^20.19.30",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
+    "@tailwindcss/postcss": "^4.1.18",
+    "postcss": "^8.5.6",
+    "postcss-import": "^16.1.1",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
   }
 }
