--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,30 +1,50 @@
 {
   "name": "@artivism/ui",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "./dist/index.mjs",
   "types": "./dist/index.d.mts",
   "exports": {
-    ".": "./dist/index.mjs",
-    "./button": "./dist/button.mjs",
-    "./card": "./dist/card.mjs",
-    "./input": "./dist/input.mjs",
-    "./badge": "./dist/badge.mjs"
+    ".": {
+      "types": "./dist/index.d.mts",
+      "import": "./dist/index.mjs"
+    },
+    "./button": {
+      "types": "./dist/button.d.mts",
+      "import": "./dist/button.mjs"
+    },
+    "./card": {
+      "types": "./dist/card.d.mts",
+      "import": "./dist/card.mjs"
+    },
+    "./input": {
+      "types": "./dist/input.d.mts",
+      "import": "./dist/input.mjs"
+    },
+    "./badge": {
+      "types": "./dist/badge.d.mts",
+      "import": "./dist/badge.mjs"
+    }
   },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
-    "typecheck": "tsc --noEmit"
+    "build": "tsup"
+  },
+  "dependencies": {
+    "@radix-ui/react-slot": "^1.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.6.0"
   },
   "peerDependencies": {
-    "react": "^18.0.0"
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.27",
+    "@types/react": "^18.3.18",
     "react": "^18.3.1",
-    "tsup": "^8.5.1",
-    "typescript": "^5.9.3"
+    "tsup": "^8.3.5",
+    "typescript": "^5.7.2"
   }
 }
