chore: migrate apps/design to cloudflare workers

--- a/apps/design/package.json
+++ b/apps/design/package.json
@@ -7,12 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "preview": "opennextjs-cloudflare build && opennextjs-cloudflare preview",
+    "deploy": "opennextjs-cloudflare build && opennextjs-cloudflare deploy"
   },
   "dependencies": {
     "@artivism/tokens": "*",
     "@artivism/ui": "*",
     "@hookform/resolvers": "^5.2.2",
+    "@opennextjs/cloudflare": "^1.16.5",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
