fix: set compatibility_date to 2026-02-20

--- a/apps/design/wrangler.jsonc
+++ b/apps/design/wrangler.jsonc
@@ -1,8 +1,8 @@
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
 	"main": ".open-next/worker.js",
-	"name": "design",
-	"compatibility_date": "2026-02-27",
+	"name": "design-system",
+	"compatibility_date": "2026-02-20",
 	"compatibility_flags": [
 		"nodejs_compat",
 		"global_fetch_strictly_public"
@@ -16,7 +16,7 @@
 			// Self-reference service binding, the service name must match the worker name
 			// see https://opennext.js.org/cloudflare/caching
 			"binding": "WORKER_SELF_REFERENCE",
-			"service": "design"
+			"service": "design-system"
 		}
 	]
 }
